@@ -248,6 +248,16 @@ BALLOON_CMD[string]=
 # for more information on possible facilities.
 SYSLOG=LOG_LOCAL0
 
-# Set DEBUG to 1 to enable verbose output.
+# Set DEBUG as a bitmask of the following settings.
 # Of course never to be used on live systems!
+#
+# Display PHP notice level warnings
+DEBUG_PHP_NOTICE=1
+#
+# Display timings for loading webpages
+DEBUG_TIMINGS=2
+#
+# Display SQL queries on webpages
+DEBUG_SQL=4
+
 DEBUG=0
