@@ -26,5 +26,6 @@ function totaltime() {
 	list($micros2, $secs2) = explode(' ',microtime());
 	$elapsed_ms = round(1000*(($secs2 - $secs1) + ($micros2 - $micros1)));
 	
-	echo "Execution took: $elapsed_ms ms, queries: $DEBUG_NUM_QUERIES\n";
+	echo "Execution took: $elapsed_ms ms" .
+		(DEBUG & DEBUG_SQL ? ", queries: $DEBUG_NUM_QUERIES\n" : "\n");
 }
