@@ -5,7 +5,7 @@
  */ 
 if (!defined('DOMJUDGE_VERSION')) die("DOMJUDGE_VERSION not defined.");
 
-if ( DEBUG ) {
+if ( DEBUG & DEBUG_TIMINGS ) {
 	echo "<p>"; totaltime(); echo "</p>";
 } ?>
 
