@@ -18,7 +18,7 @@ define('IS_JURY', 1);
 
 require_once('../../etc/config.php');
 
-if( DEBUG ) {
+if( DEBUG & DEBUG_TIMINGS ) {
 	include_once (SYSTEM_ROOT . '/lib/lib.timer.php');
 }
 
